--- a/css/reset.css
+++ b/css/reset.css
@@ -131,3 +131,7 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+.form-control:focus{
+    outline: none;
+    box-shadow: none;
+}
